# MadeAlgorithmsHomework2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
10_interpreter/: AdditionalFunctions.cmake  CMakeLists.txt  CMakeLists.txt.in  Grammar.md  Logger.cmake
10_interpreter/Interpreter/: CMakeLists.txt  Convolution.cpp  Convolution.h  Grammar.cpp  Grammar.h  Lexeme.cpp  Lexeme.h  Lexer.cpp  Lexer.h  Syntaxer.cpp  Syntaxer.h  main.cpp
10_interpreter/Interpreter.Tests/: CMakeLists.txt  LexerArraysTests.cpp  LexerBracketsAndFunctionsTests.cpp  LexerCommonTests.cpp  LexerComparisonTests.cpp  LexerLogicalTests.cpp  SyntaxerArraysTests.cpp  SyntaxerCommonTests.cpp  SyntaxerComparisonTests.cpp  SyntaxerFunctionsTests.cpp  SyntaxerLogicalTests.cpp  SyntaxerPriorityTests.cpp  test.cpp
11_strings/: CMakeLists.txt
11_strings/task1/: CMakeLists.txt  main.cpp
11_strings/task2/: CMakeLists.txt  main.cpp
11_strings/task3/: CMakeLists.txt  main.cpp
11_strings/task4/: CMakeLists.txt  main.cpp
11_strings/task5/: CMakeLists.txt  main.cpp
12_strings_advanced/: CMakeLists.txt
12_strings_advanced/task1/: CMakeLists.txt  main.cpp
12_strings_advanced/task2/: CMakeLists.txt  main.cpp
12_strings_advanced/task3/: CMakeLists.txt  main.cpp
12_strings_advanced/task4/: CMakeLists.txt  main.cpp
12_strings_advanced/task5/: CMakeLists.txt  main.cpp
13_geometry/: CMakeLists.txt
13_geometry/task1/: CMakeLists.txt  main.cpp
13_geometry/task2/: CMakeLists.txt  main.cpp
13_geometry/task3/: CMakeLists.txt  main.cpp
13_geometry/task4_not_solved/: CMakeLists.txt  main.cpp
13_geometry/task5/: CMakeLists.txt  main.cpp
14_fft/: CMakeLists.txt
14_fft/task1/: CMakeLists.txt  main.cpp
14_fft/task2/: CMakeLists.txt  main.cpp
14_fft/task3/: CMakeLists.txt  main.cpp
14_fft/task4/: CMakeLists.txt  main.cpp
15_persistence/: CMakeLists.txt
15_persistence/task1/: CMakeLists.txt  main.cpp
15_persistence/task2/: CMakeLists.txt  main.cpp
15_persistence/task3/: CMakeLists.txt  main.cpp
15_persistence/task4/: CMakeLists.txt  main.cpp
15_persistence/task5/: CMakeLists.txt  main.cpp
1_dynamics/: CMakeLists.txt
1_dynamics/task1/: CMakeLists.txt  main.cpp  task1_1
1_dynamics/task2/: CMakeLists.txt  main.cpp  task1_2
1_dynamics/task3/: CMakeLists.txt  main.cpp  task1_3
1_dynamics/task4/: CMakeLists.txt  main.cpp  task1_4
1_dynamics/task5/: CMakeLists.txt  main.cpp  task1_5
2_dynamics_advanced/: CMakeLists.txt  Makefile  cmake_install.cmake
2_dynamics_advanced/task1/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  task2_1
2_dynamics_advanced/task2/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  task2_2
2_dynamics_advanced/task3/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
2_dynamics_advanced/task3_not_solved/: main.cpp  task2_3
2_dynamics_advanced/task4/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  task2_4
2_dynamics_advanced/task5/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  task2_5
2_dynamics_advanced/task6/: Makefile  cmake_install.cmake  main.cpp  task2_6
2_dynamics_advanced/task6_not_solved/: CMakeLists.txt
3_numbers/: CMakeLists.txt
3_numbers/task1/: CMakeLists.txt  main.cpp  task3_1
3_numbers/task2/: CMakeLists.txt  main.cpp  task3_2
3_numbers/task3_not_solved/: main.cpp  (+2 more)
4_numbers_advanced/: CMakeLists.txt
5_intervals/: CMakeLists.txt
6_intervals_advanced/: CMakeLists.txt
7_npc/: hw.odt
9_flows_advanced/: CMakeLists.txt
(+68 files in other folders)
