cmake_minimum_required(VERSION 3.12)
project(MadeAlgorithmsHomework2)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(1_dynamics)
add_subdirectory(2_dynamics_advanced)
add_subdirectory(3_numbers)
add_subdirectory(4_numbers_advanced)
add_subdirectory(5_intervals)

#Cxxdroid-binary: 4_numbers_advanced/task3/task4_3