cmake_minimum_required(VERSION 3.12)
project(MadeAlgorithmsHomework2)

set(CMAKE_CXX_STANDARD 17)

#add_subdirectory(1_dynamics)
#add_subdirectory(2_dynamics_advanced)
#add_subdirectory(3_numbers)
#add_subdirectory(4_numbers_advanced)
#add_subdirectory(5_intervals)
#add_subdirectory(6_intervals_advanced)
#add_subdirectory(8_flows)
#add_subdirectory(9_flows_advanced)
#add_subdirectory(10_interpreter)
#add_subdirectory(11_strings)
#add_subdirectory(12_strings_advanced)
#add_subdirectory(13_geometry)
#add_subdirectory(14_fft)
add_subdirectory(15_persistence)

#Cxxdroid-binary: 4_numbers_advanced/task3_not_solved/task4_3